--- a/42.html
+++ b/42.html
@@ -1,5 +1,16 @@
 <html>
+    <head> 
+        <link href="42.css" rel="stylesheet" type="text/css">
+    </head>
     <body>
-        
+        <ul>
+
+<li value="1">2</li>
+
+<li value="2">1</li>
+
+<li value="3">3</li>
+
+</ul>
     </body>
 </html>
